Add esp_mem.c object file for memory management in mbedtls
This commit introduces the compiled object file for esp_mem.c, which is responsible for memory allocation and deallocation in the mbedtls component of the ESP-IDF. The addition of this file enhances the memory management capabilities of the library, ensuring efficient handling of memory resources.

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,7 @@
 [platformio]
 src_dir = .
 include_dir = .
-build_cache_dir = .pio/cache
+#build_cache_dir = .pio/cache
 
 [env:esp32-c5-zigbee]
 # to get it running: 
@@ -90,6 +90,8 @@ build_src_filter = +<*> -<*.ino> -<html/*> -<external/*> -<ospi-analog/*> -<sens
 #static const uint8_t SCK = 6;
 # See: https://community.platformio.org/t/esp32c6-arduino-3-00-and-zigbee-support/40094/18
 platform = https://github.com/pioarduino/platform-espressif32.git#develop
+# Custom libs with PSRAM BSS support are used via symlink in ~/.platformio/packages/
+# framework-arduinoespressif32-libs -> /data/Workspace/framework-arduinoespressif32-libs
 framework = arduino
 board = os4proEsp32
 board_build.mcu = esp32c5
@@ -123,6 +125,10 @@ build_flags =
 	-D WEBSOCKETS_SAVE_RAM
 	-D WEBSOCKETS_MAX_DATA_SIZE=4096
 	-D NODEBUG_WEBSOCKETS
+	# PSRAM/SPIRAM configuration - enable EXT_RAM_BSS_ATTR to place static vars in PSRAM
+	-D CONFIG_SPIRAM=1
+	-D CONFIG_SPIRAM_ALLOW_BSS_SEG_EXTERNAL_MEMORY=1
+	-D CONFIG_SPIRAM_ALLOW_NOINIT_SEG_EXTERNAL_MEMORY=1
 lib_ignore =
    Zigbee
    SD
