--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,8 @@
 [platformio]
 src_dir = .
 include_dir = .
-#build_cache_dir = .pio/cache
+build_cache_dir = .pio/cache
+packages_dir = .pio/packages
 
 [env:esp32-c5-zigbee]
 # to get it running: 
@@ -27,7 +28,11 @@ include_dir = .
 #static const uint8_t SCK = 6;
 # See: https://community.platformio.org/t/esp32c6-arduino-3-00-and-zigbee-support/40094/18
 # Use local platform with framework junction link in .platformio/packages
-platform = https://github.com/pioarduino/platform-espressif32.git#develop
+platform = file:///data/Workspace/platform-espressif32
+# Use local custom framework libs to avoid package install conflicts
+platform_packages =
+	framework-arduinoespressif32@file:///data/Workspace/arduino-esp32
+	# framework-arduinoespressif32-libs: Using symlink in .pio/packages/
 board = os4proEsp32
 board_build.mcu = esp32c5
 board_build.flash_mode = qio
@@ -54,9 +59,6 @@ build_flags =
 	#-D SERIAL_DEBUG
 	-D ZIGBEE_MODE_ZCZR	
 	-I..\OpenThings-Framework-Firmware-Library
-	-D WEBSOCKETS_SAVE_RAM
-	-D WEBSOCKETS_MAX_DATA_SIZE=4096
-	-D NODEBUG_WEBSOCKETS
 lib_ignore =
     #Zigbee
     Matter 
@@ -89,7 +91,14 @@ build_src_filter = +<*> -<*.ino> -<html/*> -<external/*> -<ospi-analog/*> -<sens
 #static const uint8_t MISO = 14;
 #static const uint8_t SCK = 6;
 # See: https://community.platformio.org/t/esp32c6-arduino-3-00-and-zigbee-support/40094/18
-platform = https://github.com/pioarduino/platform-espressif32.git#develop
+platform = file:///data/Workspace/platform-espressif32
+# Use local custom framework libs to avoid package install conflicts
+platform_packages =
+	framework-arduinoespressif32@file:///data/Workspace/arduino-esp32
+	# framework-arduinoespressif32-libs: Using symlink in .pio/packages/
+	# Do NOT use file:// here — PlatformIO copies instead of symlinking,
+	# which causes stale sdkconfig values. The symlink is created by:
+	# ln -sfn /data/Workspace/framework-arduinoespressif32-libs .pio/packages/framework-arduinoespressif32-libs
 # Custom libs with PSRAM BSS support are used via symlink in ~/.platformio/packages/
 # framework-arduinoespressif32-libs -> /data/Workspace/framework-arduinoespressif32-libs
 framework = arduino
@@ -100,7 +109,7 @@ board_build.psram_type = qio
 board_build.filesystem = littlefs
 board_build.partitions = os4_matter.csv
 upload_protocol = esptool
-monitor_filters = esp32_exception_decoder
+monitor_filters = colorize, esp32_exception_decoder
 upload_speed = 460800
 #upload_protocol = espota
 #upload_port = 192.168.4.1          # Adjust to your ESP32 IP address
@@ -114,21 +123,14 @@ extra_scripts =
 build_flags = 
 	-D BOARD_HAS_PSRAM
 	-D SOC_PSRAM_DMA_CAPABLE
-	-D SOC_CACHE_INTERNAL_MEM_VIA_L1CACHE
 	-D ESP32C5
 	-D OS_ENABLE_BLE
 	-D ENABLE_MATTER
 	-D ENABLE_DEBUG
-	-D ENABLE_MEMORY_DEBUG
+	#-D ENABLE_MEMORY_DEBUG
 	#-D SERIAL_DEBUG
-	-I..\OpenThings-Framework-Firmware-Library
-	-D WEBSOCKETS_SAVE_RAM
-	-D WEBSOCKETS_MAX_DATA_SIZE=4096
-	-D NODEBUG_WEBSOCKETS
-	# PSRAM/SPIRAM configuration - enable EXT_RAM_BSS_ATTR to place static vars in PSRAM
-	-D CONFIG_SPIRAM=1
-	-D CONFIG_SPIRAM_ALLOW_BSS_SEG_EXTERNAL_MEMORY=1
-	-D CONFIG_SPIRAM_ALLOW_NOINIT_SEG_EXTERNAL_MEMORY=1
+	-I../OpenThings-Framework-Firmware-Library
+	-I../pubsubclient3
 lib_ignore =
    Zigbee
    SD
@@ -140,13 +142,14 @@ lib_deps =
 	BLE
 	#Zigbee
 	https://github.com/ThingPulse/esp8266-oled-ssd1306/archive/4.2.0.zip
-	knolleary/PubSubClient @ ^2.8
+	#knolleary/PubSubClient @ ^2.8
+	file://../pubsubclient3
 	file://../ArduinoWebSockets
 	#https://github.com/OpenSprinklerShop/OpenThings-Framework-Firmware-Library
 	file://../OpenThings-Framework-Firmware-Library
 	RobTillaart/ADS1X15
 	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
-build_src_filter = +<*> -<*.ino> -<html/*> -<external/*> -<ospi-analog/*> -<sensor_ospi*> -<managed_components/*> -<OpenThingsLib/*>
+build_src_filter = +<*> -<*.ino> -<html/*> -<external/*> -<ospi-analog/*> -<sensor_ospi*> -<managed_components/*> -<OpenThingsLib/*> -<demo_build.cpp>
 
 [env:os3x_esp8266]
 platform = espressif8266@4.2.1
@@ -159,7 +162,7 @@ lib_deps =
 	https://github.com/OpenSprinklerShop/OpenThings-Framework-Firmware-Library
 	https://github.com/OpenSprinklerShop/ArduinoWebSockets
 	RobTillaart/ADS1X15
-	https://github.com/bluemurder/esp8266-ping
+	ESP8266Ping
 	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
 build_src_filter = +<*> -<html/*> --<external/*>
 upload_speed = 460800
@@ -191,7 +194,7 @@ build_flags =
 	-Iexternal/influxdb-cpp
 lib_deps = 
 	https://github.com/ThingPulse/esp8266-oled-ssd1306
-	https://github.com/opensprinklershop/OpenThings-Framework-Firmware-Library
+	file://../OpenThings-Framework-Firmware-Library
 	https://github.com/orca-zhang/influxdb-cpp.git
 ; NOTE: This environment requires Linux or WSL to build.
 ; On Windows, use WSL: cd /mnt/d/Projekte/openSprinkler-firmware-esp32 && pio run -e linux
