Add IEEE 802.15.4 Radio Configuration API and ZigBee support for ESP32-C5
- Introduced a new API for configuring the IEEE 802.15.4 radio, allowing runtime selection between Matter and ZigBee modes.
- Added endpoints for getting and setting the radio mode, joining ZigBee networks, and managing devices in ZigBee Gateway mode.
- Implemented configuration persistence in LittleFS with a JSON format.
- Created internal headers and implementation files for ZigBee Gateway functionality.
- Updated platform availability matrix to include new endpoints and their requirements.
- Enhanced existing documentation to reflect the new features and usage examples.

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,12 @@ include_dir = .
 build_cache_dir = .pio/cache
 packages_dir = .pio/packages
 
-[env:esp32-c5-zigbee]
+[env:esp32-c5]
+# Unified ESP32-C5 environment with runtime-selectable IEEE 802.15.4 mode.
+# The radio mode (Disabled / Matter / ZigBee Gateway / ZigBee Client) is
+# configured at runtime via /ieee802154.json and the /ir, /iw web API.
+# Changing the mode requires a reboot.
+#
 # to get it running: 
 # 1. You need a OpenSprinkler with ESP32-C5-WROOM-1-N8R8 and W25Q128 external flash
 # 2. Edit pins_arduino.h: 
@@ -22,7 +27,7 @@ packages_dir = .pio/packages
 #static const uint8_t RX = 12;
 #static const uint8_t SDA = 0;
 #static const uint8_t SCL = 1;
-#static const uint8_t SS = 5;
+#static const uint8_t SS = 3;
 #static const uint8_t MOSI = 13;
 #static const uint8_t MISO = 14;
 #static const uint8_t SCK = 6;
@@ -33,74 +38,9 @@ platform = file:///data/Workspace/platform-espressif32
 platform_packages =
 	framework-arduinoespressif32@file:///data/Workspace/arduino-esp32
 	# framework-arduinoespressif32-libs: Using symlink in .pio/packages/
-board = os4proEsp32
-board_build.mcu = esp32c5
-board_build.flash_mode = qio
-board_build.psram_type = qio
-board_build.filesystem = littlefs
-board_build.partitions = os4_matter.csv
-upload_protocol = esptool
-monitor_filters = esp32_exception_decoder
-upload_speed = 460800
-#upload_protocol = espota
-#upload_port = 192.168.4.1          # Adjust to your ESP32 IP address
-#upload_flags = 
-#    --auth=opendoor                  # Password must match OpenSprinkler password
-monitor_speed = 115200
-build_type = debug
-build_flags = 
-	-D BOARD_HAS_PSRAM
-	-D ESP32C5
-	-D OS_ENABLE_ZIGBEE
-	-D OS_ENABLE_BLE
-	#-D ENABLE_MATTER
-	-D ENABLE_DEBUG
-	-D ENABLE_MEMORY_DEBUG
-	#-D SERIAL_DEBUG
-	-D ZIGBEE_MODE_ZCZR	
-	-I..\OpenThings-Framework-Firmware-Library
-lib_ignore =
-    #Zigbee
-    Matter 
-    SD
-    SPIFFS
-    FFat
-lib_deps = 
-	Ethernet
-	#Matter
-	Zigbee
-	https://github.com/ThingPulse/esp8266-oled-ssd1306/archive/4.2.0.zip
-	knolleary/PubSubClient @ ^2.8
-	file://../ArduinoWebSockets
-	#https://github.com/OpenSprinklerShop/OpenThings-Framework-Firmware-Library
-	file://../OpenThings-Framework-Firmware-Library
-	RobTillaart/ADS1X15
-	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
-build_src_filter = +<*> -<*.ino> -<html/*> -<external/*> -<ospi-analog/*> -<sensor_ospi*> -<managed_components/*>
-
-[env:esp32-c5-matter]
-# to get it running: 
-# 1. You need a OpenSprinkler with ESP32-C5-WROOM-1-N8R8 and W25Q128 external flash
-# 2. Edit pins_arduino.h: 
-#static const uint8_t TX = 11;
-#static const uint8_t RX = 12;
-#static const uint8_t SDA = 0;
-#static const uint8_t SCL = 1;
-#static const uint8_t SS = 5;
-#static const uint8_t MOSI = 13;
-#static const uint8_t MISO = 14;
-#static const uint8_t SCK = 6;
-# See: https://community.platformio.org/t/esp32c6-arduino-3-00-and-zigbee-support/40094/18
-platform = file:///data/Workspace/platform-espressif32
-# Use local custom framework libs to avoid package install conflicts
-platform_packages =
-	framework-arduinoespressif32@file:///data/Workspace/arduino-esp32
-	# framework-arduinoespressif32-libs: Using symlink in .pio/packages/
 	# Do NOT use file:// here — PlatformIO copies instead of symlinking,
 	# which causes stale sdkconfig values. The symlink is created by:
 	# ln -sfn /data/Workspace/framework-arduinoespressif32-libs .pio/packages/framework-arduinoespressif32-libs
-# Custom libs with PSRAM BSS support are used via symlink in ~/.platformio/packages/
-# framework-arduinoespressif32-libs -> /data/Workspace/framework-arduinoespressif32-libs
 framework = arduino
 board = os4proEsp32
 board_build.mcu = esp32c5
@@ -120,27 +60,30 @@ build_type = debug
 extra_scripts = 
 	pre:pre_build_sdkconfig.py
 	fix_build.py
+	fix_linker.py
 build_flags = 
 	-D BOARD_HAS_PSRAM
 	-D SOC_PSRAM_DMA_CAPABLE
+	-D OTF_USE_PSRAM
 	-D ESP32C5
+	-D OS_ENABLE_ZIGBEE
 	-D OS_ENABLE_BLE
+	-D ZIGBEE_MODE_ZCZR
 	-D ENABLE_MATTER
 	-D ENABLE_DEBUG
-	#-D ENABLE_MEMORY_DEBUG
+	-D ENABLE_MEMORY_DEBUG
 	#-D SERIAL_DEBUG
 	-I../OpenThings-Framework-Firmware-Library
 	-I../pubsubclient3
 lib_ignore =
-   Zigbee
-   SD
-   SPIFFS
-   FFat
+    SD
+    SPIFFS
+    FFat
 lib_deps = 
 	Ethernet
+	Zigbee
 	Matter
 	BLE
-	#Zigbee
 	https://github.com/ThingPulse/esp8266-oled-ssd1306/archive/4.2.0.zip
 	#knolleary/PubSubClient @ ^2.8
 	file://../pubsubclient3
@@ -156,15 +99,17 @@ platform = espressif8266@4.2.1
 board = d1_mini
 framework = arduino
 lib_ldf_mode = deep
+extra_scripts = add_longcalls.py
 lib_deps = 
 	https://github.com/ThingPulse/esp8266-oled-ssd1306
 	knolleary/PubSubClient
-	https://github.com/OpenSprinklerShop/OpenThings-Framework-Firmware-Library
+	file://../OpenThings-Framework-Firmware-Library
 	https://github.com/OpenSprinklerShop/ArduinoWebSockets
 	RobTillaart/ADS1X15
 	ESP8266Ping
+	bluemurder/ESP8266-ping
 	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
-build_src_filter = +<*> -<html/*> --<external/*>
+build_src_filter = +<*> -<*.ino> -<html/*> -<external/*> -<ospi-analog/*> -<sensor_ospi*> -<managed_components/*> -<OpenThingsLib/*> -<demo_build.cpp>
 upload_speed = 460800
 monitor_speed = 115200
 board_build.flash_mode = dio
@@ -172,13 +117,11 @@ board_build.ldscript = eagle.flash.4m2m.ld
 board_build.f_cpu = 160000000L
 board_build.f_flash = 80000000L
 #build_flags = -DARP_TABLE_SIZE=40
-build_type = debug
 build_flags = 
 	-DENABLE_DEBUG 
     -Os
-    -ffunction-sections
-    -fdata-sections
     -Wl,--gc-sections
+    -mlongcalls
 monitor_filters = colorize, esp8266_exception_decoder
 ;ESP8266;ARDUINO;DEBUG_ESP_SSL;DEBUG_ESP_PORT)
 
@@ -186,12 +129,18 @@ monitor_filters = colorize, esp8266_exception_decoder
 platform = native
 build_flags = 
 	-DOSPI
+	-DSMTP_OPENSSL
 	-lpthread
 	-lmosquitto
 	-lssl
 	-lcrypto
+	-lmodbus
+	-lcurl
+	-li2c
+	-lbluetooth
 	-std=c++14
 	-Iexternal/influxdb-cpp
+build_src_filter = +<*> -<*.ino> -<html/*> -<external/*> -<ospi-analog/*> -<sensor_ospi_ads1115*> -<sensor_ospi_pcf8591*> -<managed_components/*> -<OpenThingsLib/*> -<demo_build.cpp>
 lib_deps = 
 	https://github.com/ThingPulse/esp8266-oled-ssd1306
 	file://../OpenThings-Framework-Firmware-Library
