Refactor BLE and Zigbee coexistence management
- Updated battery level initialization to use UINT32_MAX for unmeasured states in sensor_ble.h and sensor_zigbee.h.
- Enhanced BLE scanning function to include a passive mode parameter in sensor_ble.h.
- Improved internal sensor data handling in sensor_internal.cpp to set data_ok flag when data remains unchanged.
- Removed unused functions and variables related to Zigbee restart guards in sensor_zigbee.cpp and sensor_zigbee_gw.cpp.
- Implemented radio arbiter for managing BLE and Zigbee coexistence, allowing for prioritized web traffic while enabling periodic BLE scanning.
- Added early initialization for BLE and Zigbee in sensors.cpp to ensure proper resource allocation.
- Documented current state and functionality of BLE/Zigbee/WiFi coexistence in new markdown file.
- Created radio arbiter module to handle coexistence logic and state management.

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,54 +14,92 @@ include_dir = .
 build_cache_dir = .pio/cache
 packages_dir = .pio/packages
 
-[env:esp32-c5]
-# Unified ESP32-C5 environment with runtime-selectable IEEE 802.15.4 mode.
-# The radio mode (Disabled / Matter / ZigBee Gateway / ZigBee Client) is
-# configured at runtime via /ieee802154.json and the /ir, /iw web API.
-# Changing the mode requires a reboot.
-#
-# to get it running: 
-# 1. You need a OpenSprinkler with ESP32-C5-WROOM-1-N8R8 and W25Q128 external flash
-# 2. Edit pins_arduino.h: 
-#static const uint8_t TX = 11;
-#static const uint8_t RX = 12;
-#static const uint8_t SDA = 0;
-#static const uint8_t SCL = 1;
-#static const uint8_t SS = 3;
-#static const uint8_t MOSI = 13;
-#static const uint8_t MISO = 14;
-#static const uint8_t SCK = 6;
-# See: https://community.platformio.org/t/esp32c6-arduino-3-00-and-zigbee-support/40094/18
-# Use local platform with framework junction link in .platformio/packages
-platform = file:///data/Workspace/platform-espressif32
-# Use local custom framework libs to avoid package install conflicts
+[env:esp32-c5-matter]
+# ESP32-C5 Matter build: Matter + BLE (no ZigBee)
+# Upload target: ota_0 @ 0x10000 (Matter)
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/55.03.37/platform-espressif32.zip
 platform_packages =
-	framework-arduinoespressif32@file:///data/Workspace/arduino-esp32
-	# framework-arduinoespressif32-libs: Using symlink in .pio/packages/
-	# Do NOT use file:// here — PlatformIO copies instead of symlinking,
-	# which causes stale sdkconfig values. The symlink is created by:
-	# ln -sfn /data/Workspace/framework-arduinoespressif32-libs .pio/packages/framework-arduinoespressif32-libs
+	framework-arduinoespressif32@https://github.com/espressif/arduino-esp32/releases/download/3.3.7/esp32-core-3.3.7.tar.xz
+	framework-arduinoespressif32-libs@file:///data/Workspace/framework-arduinoespressif32-libs
 framework = arduino
 board = os4proEsp32
 board_build.mcu = esp32c5
 board_build.flash_mode = qio
 board_build.psram_type = qio
 board_build.filesystem = littlefs
-board_build.partitions = os4_matter.csv
+board_build.partitions = os4_c5_dual_otf_8mb.csv
+board_upload.flash_size = 8MB
+board_upload.offset_address = 0x10000
 upload_protocol = esptool
 monitor_filters = colorize, esp32_exception_decoder
 upload_speed = 460800
-#upload_protocol = espota
-#upload_port = 192.168.4.1          # Adjust to your ESP32 IP address
-#upload_flags = 
-#    --auth=opendoor                  # Password must match OpenSprinkler password
 monitor_speed = 115200
-build_type = debug
-extra_scripts = 
+build_type = release
+extra_scripts =
 	pre:pre_build_sdkconfig.py
 	fix_build.py
 	fix_linker.py
-build_flags = 
+build_flags =
+	-Os
+	-flto=auto
+	-g
+	-D BOARD_HAS_PSRAM
+	-D SOC_PSRAM_DMA_CAPABLE
+	-D OTF_USE_PSRAM
+	-D ESP32C5
+	-D OS_ENABLE_BLE
+	-D ENABLE_MATTER
+	-D OTF_BOOT_VARIANT=1
+	-D ENABLE_DEBUG
+	-D ENABLE_MEMORY_DEBUG
+	-I../OpenThings-Framework-Firmware-Library
+	-I../pubsubclient3
+lib_ignore =
+	SD
+	SPIFFS
+	FFat
+	Zigbee
+lib_deps =
+	Ethernet
+	Matter
+	BLE
+	https://github.com/ThingPulse/esp8266-oled-ssd1306/archive/4.2.0.zip
+	file://../pubsubclient3
+	file://../ArduinoWebSockets
+	file://../OpenThings-Framework-Firmware-Library
+	RobTillaart/ADS1X15
+	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
+build_src_filter = +<*> -<*.ino> -<html/*> -<external/*> -<ospi-analog/*> -<sensor_ospi*> -<managed_components/*> -<OpenThingsLib/*> -<demo_build.cpp>
+
+[env:esp32-c5-zigbee]
+# ESP32-C5 ZigBee build: ZigBee + BLE (no Matter)
+# Upload target: ota_1 @ 0x3A0000 (ZigBee)
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/55.03.37/platform-espressif32.zip
+platform_packages =
+	framework-arduinoespressif32@https://github.com/espressif/arduino-esp32/releases/download/3.3.7/esp32-core-3.3.7.tar.xz
+	framework-arduinoespressif32-libs@file:///data/Workspace/framework-arduinoespressif32-libs
+framework = arduino
+board = os4proEsp32
+board_build.mcu = esp32c5
+board_build.flash_mode = qio
+board_build.psram_type = qio
+board_build.filesystem = littlefs
+board_build.partitions = os4_c5_dual_otf_8mb.csv
+board_upload.flash_size = 8MB
+board_upload.offset_address = 0x3A0000
+upload_protocol = esptool
+monitor_filters = colorize, esp32_exception_decoder
+upload_speed = 460800
+monitor_speed = 115200
+build_type = release
+extra_scripts =
+	pre:pre_build_sdkconfig.py
+	fix_build.py
+	fix_linker.py
+build_flags =
+	-Os
+	-flto=auto
+	-g
 	-D BOARD_HAS_PSRAM
 	-D SOC_PSRAM_DMA_CAPABLE
 	-D OTF_USE_PSRAM
@@ -69,30 +107,30 @@ build_flags =
 	-D OS_ENABLE_ZIGBEE
 	-D OS_ENABLE_BLE
 	-D ZIGBEE_MODE_ZCZR
-	-D ENABLE_MATTER
+	-D OTF_BOOT_VARIANT=2
 	-D ENABLE_DEBUG
 	-D ENABLE_MEMORY_DEBUG
-	#-D SERIAL_DEBUG
 	-I../OpenThings-Framework-Firmware-Library
 	-I../pubsubclient3
 lib_ignore =
-    SD
-    SPIFFS
-    FFat
-lib_deps = 
+	SD
+	SPIFFS
+	FFat
+	Matter
+lib_deps =
 	Ethernet
 	Zigbee
-	Matter
 	BLE
 	https://github.com/ThingPulse/esp8266-oled-ssd1306/archive/4.2.0.zip
-	#knolleary/PubSubClient @ ^2.8
 	file://../pubsubclient3
 	file://../ArduinoWebSockets
-	#https://github.com/OpenSprinklerShop/OpenThings-Framework-Firmware-Library
 	file://../OpenThings-Framework-Firmware-Library
 	RobTillaart/ADS1X15
 	https://github.com/tobiasschuerg/InfluxDB-Client-for-Arduino
 build_src_filter = +<*> -<*.ino> -<html/*> -<external/*> -<ospi-analog/*> -<sensor_ospi*> -<managed_components/*> -<OpenThingsLib/*> -<demo_build.cpp>
+
+[env:esp32-c5]
+extends = env:esp32-c5-matter
 
 [env:os3x_esp8266]
 platform = espressif8266@4.2.1
